Switch resources to use pre-generated tree structure